# rusty-socks

./: .coderabbit.yaml  .env  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE.md  QUICKSTART.md  README.md  ROADMAP.md  SECURITY.md  deny.toml  wrangler.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql.yml  mdbook.yml  release.yml  rust.yml
docs/: .gitignore  README.md  book.toml
docs/src/: CNAME  SUMMARY.md  introduction.md  troubleshooting.md
docs/src/advanced/: clustering.md  handlers.md  monitoring.md  plugins.md
docs/src/api/: client.md  messages.md  server.md
docs/src/concepts/: architecture.md  performance.md  security.md  websocket.md
docs/src/contributing/: architecture.md  security.md  setup.md
docs/src/deployment/: checklist.md  cloud.md  docker.md
docs/src/examples/: chat.md  gaming.md  iot.md  trading.md
docs/src/getting-started/: configuration.md  installation.md  quickstart.md
docs/src/guide/: authentication.md  basic-usage.md  rate-limiting.md  rooms.md  tls.md
examples/: chat_client.rs  gaming_server.rs  trading_client.rs  unicode_security_demo.rs
scripts/: update-dependencies.sh
src/: config.rs  constants.rs  error.rs  lib.rs  security_logger.rs  tls.rs  worker.rs
src/auth/: mod.rs  provider.rs  token.rs  user.rs
src/benchmarks/: connection_test.lua
src/core/: broadcast_optimizer.rs  connection.rs  ip_extractor.rs  message.rs  message_handler.rs  message_types.rs  mod.rs  multi_tier_rate_limiter.rs  rate_limiter.rs  room.rs  server.rs  session.rs  thread_pool.rs
src/handlers/: auth.rs  mod.rs  plugin.rs  token_management.rs  websocket.rs
src/metrics/: mod.rs
src/security/: csrf.rs  headers.rs  mod.rs  production_warnings.rs  timing.rs  unicode_validation.rs  xss.rs
src/storage/: memory.rs  message_store.rs  mod.rs  token_revocation.rs  traits.rs
src/worker/: utils.rs
tests/: auth_test.rs  room_test.rs  secret_separation_test.rs  unit_tests.rs  user_test.rs  websocket_auth_test.rs  websocket_test.rs
